# little-diary

./: config.toml  db.py  main.py  note.py  pyproject.toml  ui.py
