[tool.poetry]
name = "diary"
version = "0.1.0"
description = ""
authors = ["Vadym Sorokin <nicourrrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.2.3"
pymongo = "^4.0.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
